<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    android:padding="16dp">

    <!-- Logo y Título -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate_title"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:fontFamily="@font/poppins_extrabold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate_message"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppins_regular"/>

    </LinearLayout>

    <!-- Formulario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingHorizontal="50dp"
        android:elevation="2dp"
        android:background="@drawable/form_background">

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:drawableStart="@drawable/ic_user"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:drawablePadding="10dp"/>


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:drawableStart="@drawable/ic_password"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_register"
            android:drawableStart="@drawable/ic_password"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:drawablePadding="10dp"/>

        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos_register"
            android:drawableStart="@drawable/ic_password"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:drawablePadding="10dp"/>

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/type"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarte_button"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appBy"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="end"/>

</LinearLayout>
